Http-client-branch: remove usage of deprecated Class::newInstance